--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.15.13",
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
+    "@mui/x-tree-view": "^7.1.0",
+    "@types/lodash": "^4.17.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^6.1.8"
