tanstack query and devtools

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/material": "^5.15.13",
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
     "@mui/x-tree-view": "^7.1.0",
+    "@tanstack/react-query": "^5.28.9",
+    "@tanstack/react-query-devtools": "^5.28.10",
     "@types/lodash": "^4.17.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@tanstack/eslint-plugin-query": "^5.28.6",
     "@types/node": "^20.11.28",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
