--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hello-pangea/dnd": "^16.6.0",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.13",
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
